<resources>

    <array name="filters_resources">
        <item>@array/filters7</item>
        <item>@array/filters1</item>
        <item>@array/filters2</item>
        <item>@array/filters3</item>
        <item>@array/filters4</item>
        <item>@array/filters4</item>
        <item>@array/filters6</item>
    </array>
    <string name="app_name">CMedical</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot your password? Get help here</string>
    <string name="register">Do not have an account? Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_landing">MainActivity</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Add Expense</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_options">Search options</string>
    <string name="logo">logo</string>
    <string name="dental_clinic_picture">dental clinic picture</string>
    <string name="placeholder">placeholder</string>
    <string name="price_format">%s$</string>
    <string name="or">OR</string>

    <string name="total_price">Total price</string>

    <string name="clinic_info_button_image">clinic info button image</string>

    <string name="title_activity_maps">Map</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="prices">Prices</string>

    <string name="phone">Phone</string>

    <string name="address">Address</string>

    <string name="add_to_bookmarks">Add to bookmarks</string>

    <string name="fill_details">Fill Details</string>

    <string name="add_bill_photo">Add Bill Photo</string>
    <string name="user_input">User input</string>


    <string-array name="filter_titles">
        <item>Province and territorial codes</item>
        <item>White Tooth Filling</item>
        <item>Root Canal</item>
        <item>Tooth Removal</item>
        <item>Cleaning</item>
        <item>Check up</item>
        <item>Other</item>
    </string-array>
    <string-array name="filters1">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string-array name="filters2">
        <item>Front Tooth</item>
        <item>Molar</item>
    </string-array>
    <string-array name="filters3">
        <item>Simple</item>
        <item>Complicated</item>
    </string-array>
    <string-array name="filters4">
        <item>Adult</item>
        <item>Child</item>
    </string-array>
    <string-array name="filters6">
        <item>X-rays</item>
        <item>Sedation</item>
        <item>Crown</item>
        <item>Veneer</item>
        <item>Implant</item>
    </string-array>
    <string-array name="filters7">
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NT</item>
        <item>NS</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>
</resources>