<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.dmytroandriichuk.cmediacal.fragments.search.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_leave_review"
        android:name="com.dmytroandriichuk.cmediacal.fragments.review.LeaveReviewFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_leave_review" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.dmytroandriichuk.cmediacal.fragments.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
</navigation>